<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/dos">
    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/RelativeLayout01"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
       >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registrate"
        android:textColor="#ffffff"
        android:layout_gravity="center"
        android:textSize="@dimen/string_dimen_login"
        android:padding="10pt"
        />
    <EditText android:id="@+id/edt_name"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:textColorHint="#000000"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_width="match_parent"
        android:textColor="#ffffff"
        android:textAlignment="center"
        android:textSize="@dimen/string_dimen_login"
        android:singleLine="true"
        android:layout_gravity="center_horizontal" />

    <EditText android:id="@+id/edt_usuario"
        android:layout_height="wrap_content"
        android:hint="@string/nom_usuario"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp"
        android:textColor="#ffffff"
        android:textColorHint="#000000"
        android:layout_width="match_parent"
        android:textAlignment="center"
        android:textSize="@dimen/string_dimen_login"
        android:singleLine="true"
        android:layout_gravity="center_horizontal" />

    <EditText android:id="@+id/edt_contrasenia1"
        android:layout_height="wrap_content"
        android:hint="@string/contrasena"
        android:password="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp"
        android:textColor="#ffffff"
        android:textColorHint="#000000"
        android:textAlignment="center"
        android:textSize="@dimen/string_dimen_login"
        android:layout_width="match_parent"
        android:singleLine="true"
        android:layout_gravity="center_horizontal" />

    <EditText android:id="@+id/edt_contrasenia2"
        android:layout_height="wrap_content"
        android:hint="@string/confim_pass"
        android:password="true"
        android:textColor="#ffffff"
        android:textColorHint="#000000"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp"
        android:textAlignment="center"
        android:textSize="@dimen/string_dimen_login"
        android:layout_width="match_parent"
        android:singleLine="true"
        android:layout_gravity="center_horizontal" />

    <EditText android:id="@+id/edt_correo"
        android:layout_height="wrap_content"
        android:hint="@string/correo_elec"
        android:layout_marginLeft="20dp"
        android:textSize="@dimen/string_dimen_login"
        android:inputType="textEmailAddress"
        android:layout_marginRight="20dp"
        android:textColor="#ffffff"
        android:textColorHint="#000000"
        android:layout_marginTop="30dp"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_gravity="center_horizontal" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <Button android:layout_height="wrap_content"
            android:id="@+id/btn_guardar"
            android:layout_margin="30dp"
            android:text="@string/save"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:onClick="onSignUpClick"
            android:textSize="@dimen/string_dimens_btn"
            android:paddingBottom="10dp"
            android:layout_gravity="center_horizontal"
            />
        <Button android:layout_height="wrap_content"
            android:id="@+id/btn_regresar"
            android:text="@string/back"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textSize="@dimen/string_dimens_btn"
            android:layout_marginRight="40dp"
            android:layout_alignTop="@+id/btn_guardar"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="40dp" />
    </RelativeLayout>
</LinearLayout>
</ScrollView>