<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/dos">

    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/RelativeLayout01"
        android:layout_width="match_parent"
        android:layout_height="match_parent">




    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:textColor="#000000"
        android:layout_marginTop="20dp"
        android:text="@string/modulo_cinco"
        android:textSize="@dimen/string_dimens_txv" />



    <Button
        android:id="@+id/btn_custionario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/str_cuest"
        android:textSize="@dimen/string_dimens_btn"
        android:gravity="center"
        android:layout_gravity="center_horizontal" />
    <Button
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/str_video"
        android:textSize="@dimen/string_dimens_btn"
        android:gravity="center"
        android:id="@+id/btn_video"/>
</LinearLayout>
    </ScrollView>