<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/dos">
    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/RelativeLayout01"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Login"
            android:layout_marginLeft="155dp"
            android:textColor="#000000"
            android:layout_marginTop="40dp"
            android:textSize="@dimen/string_dimen_login"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/usuario"
        android:layout_gravity="center"
        android:textColor="#000000"
        android:layout_marginTop="90dp"
        android:textSize="@dimen/string_dimen_login"/>

    <EditText
        android:id="@+id/edt_usuario"
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:background="#ffffff"
        android:textColor="#000000"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textSize="@dimen/string_dimen_login"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contrasena"
        android:textSize="@dimen/string_dimen_login"
        android:textColor="#000000"
        android:layout_gravity="center"/>

    <EditText
        android:id="@+id/edt_clave"
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:textColor="#000000"
        android:background="#ffffff"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textSize="@dimen/string_dimen_login"
        />
    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_gravity="center">
        <Button
            android:id="@+id/btn_iniciar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/string_dimens_btn"
            android:text="@string/aceptar"/>
        <Button
            android:id="@+id/btn_vista"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/string_dimens_btn"
            android:text="@string/vista"
            android:layout_marginLeft="15dp"
            android:layout_alignRight="@id/btn_iniciar"/>
        <Button
            android:id="@+id/btn_registro"
            android:layout_width="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/string_dimens_btn"
            android:text="@string/registro" />
    </TableRow>
    </LinearLayout>
</ScrollView>