<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/RelativeLayout01"
        android:layout_width="match_parent"
        android:layout_height="match_parent">




        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:textColor="#ffffff"
            android:text="@string/modulo_dos"
            android:textSize="@dimen/string_dimens_txv"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/txv_ultimo"
            android:layout_gravity="center_horizontal" />
        <Button
            android:id="@+id/btn_ejemplo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ejemplo"
            android:textSize="@dimen/string_dimens_btn"
            android:gravity="center"
            ></Button>



        <Button
        android:id="@+id/btn_custionario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_cuest"
        android:textSize="@dimen/string_dimens_btn"
        android:gravity="center"
        android:layout_gravity="center_horizontal" />
    <Button
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="Video"
        android:textSize="@dimen/string_dimens_btn"
        android:gravity="center"
        android:id="@+id/btn_video"/>

</LinearLayout>
    </ScrollView>